tests/baselines/reference/defaultIsNotVisibleInLocalScope.errors.txt
a.ts(4,24): error TS2304: Cannot find name 'default'.
b.ts(2,24): error TS2304: Cannot find name 'default'.


==== a.ts (1 errors) ====
    export default function () {
        return true;
    }
    export type X = typeof default;  // expect error
                           ~~~~~~~
!!! error TS2304: Cannot find name 'default'.
    
==== b.ts (1 errors) ====
    export default { a: true }
    export type X = typeof default; // expect error
                           ~~~~~~~
!!! error TS2304: Cannot find name 'default'.